# backend_fastapi

./: .gitignore  Dockerfile  README.md  api_runner.py  docker-compose-postgres.yml  docker-compose.yml  main.py  pyproject.toml  reset.sh
api/: auth.py  chat.py  file.py  infor.py  item.py  ocr.py  user.py
models/: base.py  item.py  user.py
schemas/: base.py  item.py  user.py
setting/: .env.dev  .env.prod  .env.test  config.py
utilities/: database.py  jwt.py  tools.py
